# 7roxy

./: Cargo.toml  Documentation  Documentation.md  README.md
.github/workflows/: audit.yml  ci.yml  pr-audit.yml
client/: Cargo.toml
client/src/: lib.rs  main.rs
common/: Cargo.toml
common/src/: lib.rs
daemon/: Cargo.toml
daemon/src/: capability.rs  lib.rs  main.rs
src/: lib.rs  main.rs
