[package]
authors = ["7hoenix <jpholzmann@gmail.com>"]
edition = "2018"
name = "client"
version = "0.1.0"

[dependencies]
bytes = "0.5.5"
common = { path = "../common" }
futures = "0.3.5"
serde_json = "1.0.56"
structopt = "0.3"
tokio = { version = "0.2", features = ["full"] }
tokio-util = { version = "0.3.1", features = ["codec"] }
