[package]
name = "daemon"
version = "0.1.0"
authors = ["7hoenix <jpholzmann@gmail.com>"]
edition = "2018"

[dependencies]
common = { path = "../common" }
serde = "1.0"
serde_json = "1.0.56"
structopt = "0.3"
tokio = { version = "0.2", features = ["full"] }
tokio-util = { version = "0.3.1", features = ["codec"] }
reqwest = "0.10.6"
openssl = { version = "0.10", features = ["vendored"] }
